Adding header to index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
+<!-- START HEADER -->
+  <header class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1>PIERRE, FEUILLE, CISEAUX</h1>
+      <p>Êtes vous plus fort que votre Ordinateur???</p>
+    </div>
+  </header>
+<!-- END HEADER -->
+
 
 
 
