Adding Main to index.html

--- a/index.html
+++ b/index.html
@@ -27,13 +27,22 @@
 <!-- START HEADER -->
   <header class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1>PIERRE, FEUILLE, CISEAUX</h1>
-      <p>Êtes vous plus fort que votre Ordinateur???</p>
+      <h1>BONJOUR NOM DU JOUEUR, </h1>
+      <p>On va jouer à un jeu...</p>
     </div>
   </header>
 <!-- END HEADER -->
 
-
+<!-- START MAIN -->
+<div class="container">
+<p> JOUONS... </p>
+	<div class="row">
+	  <div class="col-sm-4">JOUEUR</div>
+	  <div class="col-sm-4">ARENE</div>
+	  <div class="col-sm-4">ORDINATEUR</div>
+	  </div>
+	</div>
+<!-- END MAIN -->
 
 
 
