Delete favicon.ico in order to keep favicon.png

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <!-- Place favicon.ico in the root directory -->
+
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -24,25 +25,25 @@
 
   <!-- Add your site or application content here -->
 
-<!-- START HEADER -->
-  <header class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1>BONJOUR NOM DU JOUEUR, </h1>
-      <p>On va jouer à un jeu...</p>
+  <!-- START HEADER -->
+  <header class="container">
+    <div class="row">
+      <div class="col-sm-12">BONJOUR, JOUEUR</div>
+      <div class="col-sm-12">ON VA JOUER A UN JEU ... </div>
     </div>
   </header>
-<!-- END HEADER -->
+  <!-- END HEADER -->
 
-<!-- START MAIN -->
-<div class="container">
-<p> JOUONS... </p>
-	<div class="row">
-	  <div class="col-sm-4">JOUEUR</div>
-	  <div class="col-sm-4">ARENE</div>
-	  <div class="col-sm-4">ORDINATEUR</div>
-	  </div>
-	</div>
-<!-- END MAIN -->
+  <!-- START MAIN -->
+  <div class="container">
+    <p> JOUONS... </p>
+    <div class="row">
+      <div class="col-sm-4">JOUEUR</div>
+      <div class="col-sm-4">ARENE</div>
+      <div class="col-sm-4">ORDINATEUR</div>
+    </div>
+  </div>
+  <!-- END MAIN -->
 
 
 
