Adding two pictures to the img file

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Bellefair|Special+Elite" rel="stylesheet">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body>
+<body background="img/IMG_8360.jpg.1920x1920_q85.jpg">
 
   <!--[if lt IE 8]>
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -26,21 +27,31 @@
   <!-- Add your site or application content here -->
 
   <!-- START HEADER -->
+
   <header class="container">
     <div class="row">
-      <div class="col-sm-12">BONJOUR, JOUEUR</div>
-      <div class="col-sm-12">ON VA JOUER A UN JEU ... </div>
+      <div class="col-sm-12">
+        <h1 class="bienvenu">BONJOUR, JOUEUR</h1>
+      </div>
+
+      <div class="col-sm-12">
+        <h2 class="bienvenubis">ON VA JOUER A UN JEU ... </h2>
+      </div>
     </div>
   </header>
-  <!-- END HEADER -->
 
+  <!-- END HEADER -->
+<br>
   <!-- START MAIN -->
+
   <div class="container">
-    <p> JOUONS... </p>
     <div class="row">
-      <div class="col-sm-4">JOUEUR</div>
-      <div class="col-sm-4">ARENE</div>
-      <div class="col-sm-4">ORDINATEUR</div>
+      <div class="col-sm-6">
+        <h3 class="player">JOUEUR</h3>
+      </div>
+      <div class="col-sm-6">
+        <h3 class="player">ORDINATEUR</h3>
+      </div>
     </div>
   </div>
   <!-- END MAIN -->
