--- a/index.html
+++ b/index.html
@@ -30,104 +30,94 @@
 
   <header class="container">
     <div class="row">
+
       <div class="col-sm-12">
         <h1 class="bienvenu">BONJOUR, JOUEUR</h1>
       </div>
 
+      <br>
+
       <div class="col-sm-12">
         <h2 class="bienvenubis">ON VA JOUER A UN JEU ... </h2>
       </div>
+
     </div>
   </header>
 
   <!-- END HEADER -->
-<br>
+  <br>
   <!-- START MAIN -->
 
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
-        <h3 class="player">JOUEUR</h3>
+
+      <div class="col-sm-4">
+        <h3 class="player">JOUEUR :</h3>
+
+        <br>
+
+        <div class="container">
+          <div class="row">
+
+            <figure class="col-sm-12">
+              <img src="img/pierre-150x150.png" alt="pierre">
+            </figure>
+
+            <br>
+
+            <figure class="col-sm-12">
+              <img src="img/feuille-150x150.png" alt="feuille">
+            </figure>
+
+            <br>
+
+            <figure class="col-sm-12">
+              <img src="img/ciseaux-150x150.png" alt="ciseaux">
+            </figure>
+
+          </div>
+        </div>
       </div>
-      <div class="col-sm-6">
-        <h3 class="player">ORDINATEUR</h3>
+
+      <div class="col-sm-4">
+        <h3 class="player">ARENE</h3>
       </div>
+
+      <div class="col-sm-4">
+        <h3 class="player">JIGSAW :</h3>
+
+        <br>
+
+        <div class="container">
+          <div class="row">
+
+            <figure class="col-sm-12">
+              <img src="img/pierre-150x150.png" alt="pierre">
+            </figure>
+
+            <br>
+
+            <figure class="col-sm-12">
+              <img src="img/feuille-150x150.png" alt="feuille">
+            </figure>
+
+            <br>
+
+            <figure class="col-sm-12">
+              <img src="img/ciseaux-150x150.png" alt="ciseaux">
+            </figure>
+
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
   <!-- END MAIN -->
 
+  <footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </footer>
 
   <!-- Images Type  -->
   <!-- <img src="http://placehold.it/350x150" alt=""> -->
