Resizing Jigsaw picture in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <header class="container">
     <div class="row">
 
-      <div class="col-sm-12">
+      <div class="col-12 col-sm-12 col-lg-12">
 
 
         <p>Entrer votre nom ici: </p><input type="text" class="fname" id="fname" onchange="myFunction()">
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-sm-4">
+      <div class="col-12 col-sm-6 col-lg-4">
         <h3 class="player" id="playername">JOUEUR :</h3>
 
         <br>
@@ -59,19 +59,19 @@
         <div class="container">
           <div class="row">
 
-            <figure class="col-sm-12">
+            <figure class="col-4 col-sm-4 col-lg-12">
               <img class="choix" src="img/pierre-150x150.png" alt="pierre" onclick="choix1('Pierre')">
             </figure>
 
             <br>
 
-            <figure class="col-sm-12">
+            <figure class="col-4 col-sm-4 col-lg-12">
               <img class="choix" src="img/feuille-150x150.png" alt="feuille" onclick="choix1('Feuille')">
             </figure>
 
             <br>
 
-            <figure class="col-sm-12">
+            <figure class="col-4 col-sm-4 col-lg-12">
               <img class="choix" src="img/ciseaux-150x150.png" alt="ciseaux" onclick="choix1('Ciseaux')">
             </figure>
 
@@ -79,7 +79,7 @@
         </div>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-12 col-sm-6 col-lg-4">
         <h3 class="arene">ARENE</h3>
 
         <h3 id="helloplayername"></h3>
@@ -100,12 +100,12 @@
 
         <br>
 
-       <div class="col-sm-12">
+        <div class="col-12 col-sm-6 col-lg-4">
 
-      <p id="message"></p>
-      <p id="resultat"></p>
+          <p id="message"></p>
+          <p id="resultat"></p>
 
-       </div>
+        </div>
         <h3>SCORE</h3>
 
         <br>
@@ -114,7 +114,7 @@
 
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-12 col-sm-6 col-lg-4">
         <h3 class="player">JIGSAW :</h3>
 
         <br>
