Modification in the initial game, delete all the console.log, prompt, alert...

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
           <div class="row">
 
             <figure class="col-4 col-sm-4 col-lg-12">
-              <img class="choix" src="img/pierre-150x150.png" alt="pierre" onclick="choix1('Pierre')">
+              <img class="choix" src="img/pierre-150x150.png" alt="pierre" onclick="choix('pierre')">
             </figure>
 
             <br>
 
             <figure class="col-4 col-sm-4 col-lg-12">
-              <img class="choix" src="img/feuille-150x150.png" alt="feuille" onclick="choix1('Feuille')">
+              <img class="choix" src="img/feuille-150x150.png" alt="feuille" onclick="choix('papier')">
             </figure>
 
             <br>
 
             <figure class="col-4 col-sm-4 col-lg-12">
-              <img class="choix" src="img/ciseaux-150x150.png" alt="ciseaux" onclick="choix1('Ciseaux')">
+              <img class="choix" src="img/ciseaux-150x150.png" alt="ciseaux" onclick="choix('ciseaux')">
             </figure>
 
           </div>
