Adding several div to the index.html to load the result of the game and the scoreboard

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <h2 class="bienvenubis" id="result"></h2>
         </div>
 
+
         <br>
 
         <div class="col-sm-12">
@@ -109,8 +110,30 @@
         <h3>SCORE</h3>
 
         <br>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <p id="demo"></p>
+        </div>
 
-        <p> <span id="scoreplayername"></span> vs CPU</p>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <p> <span id="scoreplayername"></span> vs CPU</p>
+          <p id="JIGSAW"></p>
+          <p id="PLAYER"></p>
+        </div>
+
+        <div class="col-12 col-sm-6 col-lg-4">
+
+            <img id="PERDU" src="" alt="">
+
+        </div>
+
+        <div class="col-12 col-sm-6 col-lg-4">
+
+            <img id="GAGNE"src="" alt="">
+
+        </div>
+
+
+
 
       </div>
 
